# Kyle_XY_Jesse_XX

./: .gitignore  CMakeLists.txt  History.md  README.md
doc/: README.md
kj_arms/: CMakeLists.txt
kj_arms/include/kj_arms/: error_codes_kj_arms.h
kj_arms/src/: SSC.c  ssc32_driver_kj_arms.cpp  ssc32_kj_arms.cpp  ssc32_node_kj_arms.cpp
ref/: GUI.txt  network.txt  servo.md
ref/Components description/Gigabyte/: gigabyte_GN-WIAG02.md
ref/Components description/MATLAB/rover/: plot_graphs.m
ref/Components description/MATLAB/rover/2019-05-02-16-51-41/: plot_graphs.m
ref/Components description/MATLAB/rover/2019-05-02-20-20-35/: plot_graphs.m
ref/Components description/MATLAB/rover/2019-05-03-10-31-03/: plot_graphs.m
ref/Components description/MATLAB/rover/2019-05-03-12-36-40/: plot_graphs.m
ref/Components description/MATLAB/rover/2019-05-03-15-11-30/: plot_graph.m
ref/Components description/MATLAB/rover/2019-05-07-21-39-32_banda_morta/: plot_graphs.m
ref/Components description/MATLAB/rover/2019-05-08-11-40-42_squareWave/: ControlSystemRover.mat  plot2.m  plot_graphs.m
ref/Components description/MATLAB/rover/2019-05-08-20-54-59_mapping/: coeficienteAngular.m  mapping_and_deadzone.fig  mapping_and_deadzone_right.fig  plot_graphs.m
ref/Components description/MATLAB/rover/2019-05-09-20-45-23_squareWave/: plot_graphs.m  tf.mat  tfs.sid
ref/Components description/MATLAB/rover/2019-05-13-19-35-52_square/: peak.m  plot_graphs.m~  plot_graphs_left.m  plot_graphs_right.m  tf_left.mat  tf_right.mat
ref/Components description/MATLAB/rover/2019-05-17-09-38-31_PID/: 2019-05-17-09-38-31.bag  plot_graphs_left.m  wheels_velocity.csv
ref/Components description/MATLAB/rover/2019-05-17-09-53-32_PID/: PID.fig  (+2 more)
ref/Components description/PCM-P50/: PCM-P50.md
ref/Components description/Robot arm/: README.md
ref/Components description/Sabertooth V1.03/: sabertooth.md
ref/Components description/Sensoray 526/: sensoray.md
ref/Components description/Sensoray 526/sdk_526_1.0.0/: ReleaseNotes.txt  SETUP.PKG  _SETUP.LIB
ref/SabertoothRC/examples/SabertoothSweep/: SabertoothSweep.ino
ref/SabertoothRC/sketch_nov02a/: sketch_nov02a.ino
ref/data_backup/Data-2017-01-10/downloads/: SY-PCI15015.rar
ref/data_backup/Data-2017-01-10/etc/: mseries_registermap.doc
ref/mobile-manipulators/: createbackup.sh
ref/mobile-manipulators/backup/: doc.2011-01-13.1.tar.bz2  doc.2011-01-14.1.tar.bz2  programming.2011-01-13.1.tar.bz2  programming.2011-01-14.1.tar.bz2  programming.2011-01-17.1.tar.bz2  programming.2011-01-20.1.tar.bz2  programming.2011-02-01.1.tar.bz2  temp.2011-01-20.1.tar.bz2  temp.2011-02-01.1.tar.bz2
ref/mobile-manipulators/downloads/: nirlpk_c_fault.patch
ref/mobile-manipulators/programming/module-template/: ..h  module-template.h
ref/mobile-manipulators/programming/server/: keyboard.c  keyboard.h  makefile  mmrobot-server  robot.c  robot.h  robotserver.h  sensoray526.h
ref/sensoray_model_526/s526/: SETUP.INI  SETUP.ISS  _SETUP.1  s526.inf
src/Basics_Motion/: CMakeLists.txt  README.md
src/Basics_Motion/include/: SSC.h
src/Basics_Motion/src/: SSC.c  sensoray526.c  serialTest.cpp  serialTest.cpp~
src/Manipulators/: CMakeLists.txt
src/Manipulators/Test_arm/: README.md  Test_arm.ino
src/Manipulators/include/kj_arms/: ssc32_driver_kj_arms.h  ssc32_kj_arms.h
src/Manipulators/src/: ssc32_kj_arms.cpp
src/Motion/: CMakeLists.txt
src/Motion/log/: .~lock.logFile_2019-04-11_13:55:54.csv#  logFile.csv  logFile_119-3-2_19:50:45.csv  logFile_2019-04-11_13:55:54.csv  logFile_2019-3-11_13:43:19.csv  logFile_2019-3-11_13:46:12.csv  logFile_2019-3-11_13:50:16.csv  logFile_2019-3-2_16:55:11.csv
src/Motion/src/: SSC.c  a.out  motion.cpp  test_signal  velocity.cpp
src/ROS/catkin_/: CMakeLists.txt
src/ROS/catkin_/devel/: .catkin  .rosinstall
src/ROS/catkin_/src/: motion.cpp
src/ROS/catkin_ws/devel/: _setup_util.py  setup.sh
src/ROS/rover/: CMakeLists.txt  package.xml
src/ROS/rover/src/: motion.cpp  velocity.cpp
src/SSC/: ServoPosition.msg  a.out  driver.cpp  motor.cpp  ssc32.cpp  ssc32.hpp
src/Sensoray/: 3  a.out  main.c  s526.c  sensoray526.c
src/kj_arms/: package.xml
src/kj_arms/include/kj_arms/: SSC.h  ssc32_driver_kj_arms.h  ssc32_kj_arms.h
src/kj_arms/src/: serialTest.cpp  ssc32_driver_kj_arms.cpp  ssc32_kj_arms.cpp  ssc32_test_kj_arms.cpp
src/rover/: README.md
src/serialcomfiles/serialcom-src/: .gitignore  CMakeLists.txt  LICENSE  README.md
src/serialcomfiles/serialcom-src/include/: serialcom.h
src/serialcomfiles/serialcom-src/src/: serialcom.c
(+508 files in other folders)
